--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,11 @@
 </head>
 
 <body>
-  <h1>Automatic G2P Conversion</h1>
+  <header>
+    <h1>Upload Files</h1>
+  </header>
   
   <div class="main-wrapper">
-
-
-    <div class="form-wrapper">
-      <h2>Upload Files</h2>
       <form method="post" enctype="multipart/form-data">
         <div class="form-item">
           <label for="word-list">
@@ -45,7 +43,6 @@
         </div>
         <input type="submit" value="Submit">
       </form>
-    </div>
   </div>
 </body>
 
