--- a/static/style.css
+++ b/static/style.css
@@ -1,27 +1,49 @@
-html {
+html, body {
   font-family: sans-serif;
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+  color: var(--text-grey)
 }
 
 :root {
   --light-grey: rgb(216, 216, 216);
   --mid-grey: rgb(233, 233, 233);
+  --text-grey: rgb(32, 32, 32);
+  --purple: #895aab;
+  --light-purple: #f5e6ff;
 }
 
-body {
-  padding: 0;
-  margin: 2em;
+
+a {
+  color: inherit;
+  margin-bottom: 1em;
+}
+
+a:visited {
+  color: inherit;
+}
+
+header {
+  width: 100%;
+  background-color: var(--purple);
+  display: flex;
+  padding: 0 2em;
+  box-sizing: border-box; 
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.411);
+  color: white;
+}
+
+header h1 {
+  margin-top: 2em;
+  margin-bottom: 0.5em;
 }
 
 .main-wrapper {
   display: flex;
   flex-flow: column;
-}
-
-.form-wrapper {
-  padding: 1em;
-  border-radius: 1em;
-  max-width: 50%;
-  border: 2px solid var(--light-grey);
+  margin: 2em;
 }
 
 .pron-table {
@@ -41,7 +63,7 @@ td, th {
 }
 
 tr:hover {
-  background-color: var(--mid-grey);
+  background-color: var(--light-purple);
 }
 
 form {
@@ -66,4 +88,12 @@ label {
   margin: 0.5em 0;
   display: flex;
   flex-flow: column;
+}
+
+.link-wrapper {
+  margin-bottom: 1em;
+}
+
+.link-wrapper a {
+  margin-right: 1em;
 }
