--- a/static/style.css
+++ b/static/style.css
@@ -76,8 +76,8 @@ select {
   width: 5em;
 }
 
-input[type="submit"] {
-  width: 5em;
+#convert-form input[type="submit"] {
+  width: 7em;
 }
 
 label {
@@ -96,4 +96,27 @@ label {
 
 .link-wrapper a {
   margin-right: 1em;
+}
+
+.button {
+    border: none;
+    padding: 0.75rem 1.5rem;
+    margin: 0;
+    color: white !important;
+    text-decoration: none;
+    background: var(--purple);
+    font-family: sans-serif;
+    font-size: 1rem;
+    cursor: pointer;
+    border-radius: 0.2em;
+    text-align: center;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    transition: opacity 200ms ease-in-out; 
+}
+
+.button:hover,
+.button:focus {
+    opacity: 0.9;
 }
