Implement display of reference lexicon

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,13 @@
           </label>
           <input id="inventory" name="inventory" type="file">
         </div>
+        
+        <div class="form-item">
+          <label for="reference">
+            Reference Lexicon
+          </label>
+          <input id="reference" name="reference" type="file">
+        </div>
 
         <div class="form-item">
           <label for="model-select">
