--- a/templates/lexicon.html
+++ b/templates/lexicon.html
@@ -24,15 +24,23 @@
       <table class="pron-table">
         <tr>
           <th>Word</th>
-          <th>Pronunciation</th>
+          <th>Adapted</th>
+          <th>Actual</th>
+          <th>Distance</th>
         </tr>
-        {% for entry in lexicon %}
+        {% for row in data %}
         <tr>
           <td>
-            {{ entry.word }}
+            {{ row[0].word }}
           </td>
           <td>
-            <input name="pron{{ loop.index0 }}" type="text" value="{{ entry.pron }}">
+            <input name="pron{{ loop.index0 }}" type="text" value="{{ row[0].pron }}">
+          </td>
+          <td>
+            {{ row[1] }}
+          </td>
+          <td>
+            {{ row[2] }}
           </td>
         </tr>
         {% endfor %}
